# src/routes/api/v1/reflect/+server.ts
@@ -3,32 +3,38 @@ import type {RequestHandler} from './$types';
 import {getMatchingService} from '$lib/app';
 import type {UrlMatch} from '$lib/matching-service';
 
-export type ReflectResponse = {
+export type ReflectResponseOk = {
 	items: UrlMatch[];
 	refreshDate: string;
 };
 
+export type ReflectResponseError = {
+	message: string;
+};
+
+export type ReflectResponse = ReflectResponseOk | ReflectResponseError;
+
 // eslint-disable-next-line @typescript-eslint/naming-convention
 export const GET: RequestHandler = async ({url: {searchParams}}) => {
-	const matchingService = await getMatchingService();
-
 	const url = searchParams.get('url');
-	const language = searchParams.get('lang');
+	const language = searchParams.get('lang') ?? 'en';
+	const property = searchParams.get('property') ?? undefined;
+
 	if (!url) {
 		// eslint-disable-next-line @typescript-eslint/no-throw-literal
 		throw error(400, 'No URL provided');
 	}
 
+	const matchingService = await getMatchingService();
+
 	const result: ReflectResponse = {
-		items: matchingService.match(url, language ?? 'en'),
+		items: matchingService.match(url, language, property),
 		refreshDate: matchingService.refreshDate.toISOString(),
 	};
 	return json(result);
 };
 
+// Enables CORS requests
 // eslint-disable-next-line @typescript-eslint/naming-convention
-export const OPTIONS: RequestHandler = () => {
-	const response = new Response();
-	response.headers.append('Access-Control-Allow-Origin', '*');
-	return response;
-};
+export const OPTIONS: RequestHandler = () => new Response();
+
